--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -34,6 +34,8 @@
         <module>security</module>
         <module>web</module>
         <module>mail</module>
+        <module>rabbitmq</module>
+        <module>i18</module>
     </modules>
 
     <dependencies>
@@ -58,7 +60,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.1.0</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
@@ -66,7 +68,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <source>${project.build.jdk.version}</source>
                     <target>${project.build.jdk.version}</target>
