更新valid方式 拆分web controller及page功能

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -35,7 +35,8 @@
         <module>web</module>
         <module>mail</module>
         <module>rabbitmq</module>
-        <module>i18</module>
+        <module>redis</module>
+        <module>controller</module>
     </modules>
 
     <dependencies>
