--- a/parent/web/pom.xml
+++ b/parent/web/pom.xml
@@ -17,6 +17,11 @@
     <dependencies>
         <dependency>
             <groupId>com.rnbbusiness.newbase</groupId>
+            <artifactId>controller</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rnbbusiness.newbase</groupId>
             <artifactId>exception</artifactId>
             <version>0.0.2-SNAPSHOT</version>
         </dependency>
@@ -39,11 +44,6 @@
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
             <version>1.2.58</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>2.1.5.RELEASE</version>
         </dependency>
         <!-- plugin -->
         <dependency>
