增加日志打印AOP功能

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -37,6 +37,7 @@
         <module>rabbitmq</module>
         <module>redis</module>
         <module>controller</module>
+        <module>aspect</module>
     </modules>
 
     <dependencies>
