--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -53,11 +53,17 @@
             <artifactId>toolkit</artifactId>
             <version>0.0.2-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.rnbbusiness.newbase</groupId>
+            <artifactId>aspect</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
 
+        <!-- AOP依赖模块 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>2.1.3.RELEASE</version>
+            <version>2.1.7.RELEASE</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -67,7 +73,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.1.3.RELEASE</version>
+                <version>2.1.7.RELEASE</version>
                 <executions>
                     <execution>
                         <goals>
