--- a/parent/aspect/pom.xml
+++ b/parent/aspect/pom.xml
@@ -2,18 +2,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>parent</artifactId>
         <groupId>com.rnbbusiness.newbase</groupId>
         <version>0.0.2-SNAPSHOT</version>
     </parent>
-    <artifactId>rabbitmq</artifactId>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.rnbbusiness.newbase</groupId>
+    <artifactId>aspect</artifactId>
+    <version>0.0.2-SNAPSHOT</version>
+    <name>aspect</name>
+    <description>Aspect for NewBase</description>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
+            <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.1.7.RELEASE</version>
         </dependency>
     </dependencies>
