--- a/demo/src/main/resources/outside/db.yml
+++ b/demo/src/main/resources/outside/db.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
     test1:
-      username: dbuser
+      username: root
       password: mysql
     test2:
-      username: dbuser
+      username: root
       password: mysql
 security:
   db:
