--- a/parent/controller/pom.xml
+++ b/parent/controller/pom.xml
@@ -11,10 +11,44 @@
     <artifactId>controller</artifactId>
 
     <dependencies>
+        <!-- spring controller -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.1.7.RELEASE</version>
+        </dependency>
+        <!-- newbase framework -->
+        <dependency>
+            <groupId>com.rnbbusiness.newbase</groupId>
+            <artifactId>exception</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rnbbusiness.newbase</groupId>
+            <artifactId>persistence</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rnbbusiness.newbase</groupId>
+            <artifactId>toolkit</artifactId>
+            <version>0.0.2-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.58</version>
+        </dependency>
+        <!-- plugin -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
