--- a/parent/toolkit/pom.xml
+++ b/parent/toolkit/pom.xml
@@ -42,7 +42,11 @@
             <artifactId>validation-api</artifactId>
             <version>2.0.1.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.12.1</version>
+        </dependency>
 
         <!-- local test -->
         <dependency>
