--- a/parent/mail/pom.xml
+++ b/parent/mail/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>parent</artifactId>
-        <groupId>com.rnbbusiness.newbase</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <groupId>com.rnb.newbase</groupId>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
