--- a/parent/web/pom.xml
+++ b/parent/web/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>parent</artifactId>
-        <groupId>com.rnbbusiness.newbase</groupId>
-        <version>0.0.2-SNAPSHOT</version>
+        <groupId>com.rnb.newbase</groupId>
+        <version>0.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.rnbbusiness.newbase</groupId>
+    <groupId>com.rnb.newbase</groupId>
     <artifactId>web</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.3-SNAPSHOT</version>
     <name>web</name>
     <description>Web for NewBase</description>
 
@@ -19,19 +19,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            <version>2.1.7.RELEASE</version>
+            <version>2.1.9.RELEASE</version>
         </dependency>
         <dependency>
-            <groupId>com.rnbbusiness.newbase</groupId>
+            <groupId>com.rnb.newbase</groupId>
             <artifactId>controller</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
-        </dependency>
-        <!-- plugin -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.8</version>
-            <scope>provided</scope>
+            <version>0.0.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
