--- a/parent/controller/pom.xml
+++ b/parent/controller/pom.xml
@@ -33,6 +33,7 @@
             <artifactId>toolkit</artifactId>
             <version>0.0.3-SNAPSHOT</version>
         </dependency>
+        <!-- tools -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -41,7 +42,7 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.58</version>
+            <version>1.2.62</version>
         </dependency>
     </dependencies>
 
