--- a/parent/security/pom.xml
+++ b/parent/security/pom.xml
@@ -16,12 +16,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-            <version>2.1.9.RELEASE</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.rnb.newbase</groupId>
             <artifactId>toolkit</artifactId>
             <version>0.0.3-SNAPSHOT</version>
@@ -35,6 +29,12 @@
             <groupId>com.rnb.newbase</groupId>
             <artifactId>web</artifactId>
             <version>0.0.3-SNAPSHOT</version>
+        </dependency>
+        <!-- spring framework -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.1.9.RELEASE</version>
         </dependency>
     </dependencies>
 </project>
