--- a/parent/aspect/pom.xml
+++ b/parent/aspect/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>parent</artifactId>
+        <artifactId>newbase-parent</artifactId>
         <groupId>com.rnb.newbase</groupId>
         <version>0.0.3-SNAPSHOT</version>
     </parent>
@@ -11,14 +11,14 @@
     <groupId>com.rnb.newbase</groupId>
     <artifactId>aspect</artifactId>
     <version>0.0.3-SNAPSHOT</version>
-    <name>aspect</name>
+    <name>${project.artifactId}</name>
     <description>Aspect for NewBase</description>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
-            <version>2.1.9.RELEASE</version>
+            <version>${spring.framework.version}</version>
         </dependency>
     </dependencies>
 
