--- a/parent/rabbitmq/pom.xml
+++ b/parent/rabbitmq/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>parent</artifactId>
         <groupId>com.rnb.newbase</groupId>
+        <artifactId>newbase-parent</artifactId>
         <version>0.0.3-SNAPSHOT</version>
     </parent>
     <artifactId>rabbitmq</artifactId>
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
-            <version>2.1.9.RELEASE</version>
+            <version>${spring.framework.version}</version>
         </dependency>
     </dependencies>
 
