--- a/parent/security/pom.xml
+++ b/parent/security/pom.xml
@@ -4,14 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>parent</artifactId>
         <groupId>com.rnb.newbase</groupId>
+        <artifactId>newbase-parent</artifactId>
         <version>0.0.3-SNAPSHOT</version>
     </parent>
     <artifactId>security</artifactId>
     <groupId>com.rnb.newbase</groupId>
     <version>0.0.3-SNAPSHOT</version>
-    <name>security</name>
+    <name>${project.artifactId}</name>
     <description>Security for NewBase</description>
 
     <dependencies>
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-            <version>2.1.9.RELEASE</version>
+            <version>${spring.framework.version}</version>
         </dependency>
     </dependencies>
 </project>
