--- a/parent/web/pom.xml
+++ b/parent/web/pom.xml
@@ -3,15 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>parent</artifactId>
         <groupId>com.rnb.newbase</groupId>
+        <artifactId>newbase-parent</artifactId>
         <version>0.0.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.rnb.newbase</groupId>
     <artifactId>web</artifactId>
     <version>0.0.3-SNAPSHOT</version>
-    <name>web</name>
+    <name>${project.artifactId}</name>
     <description>Web for NewBase</description>
 
     <dependencies>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
-            <version>2.1.9.RELEASE</version>
+            <version>${spring.framework.version}</version>
         </dependency>
         <dependency>
             <groupId>com.rnb.newbase</groupId>
