--- a/parent/toolkit/pom.xml
+++ b/parent/toolkit/pom.xml
@@ -62,6 +62,12 @@
             <artifactId>httpmime</artifactId>
             <version>4.5.10</version>
         </dependency>
+        <!-- File -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
 
         <!-- plugin -->
         <dependency>
