--- a/parent/controller/pom.xml
+++ b/parent/controller/pom.xml
@@ -25,7 +25,7 @@
         </dependency>
         <dependency>
             <groupId>com.rnb.newbase</groupId>
-            <artifactId>persistence</artifactId>
+            <artifactId>service</artifactId>
             <version>0.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -38,11 +38,6 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>4.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.62</version>
         </dependency>
     </dependencies>
 
