--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -39,10 +39,17 @@
         <module>redis</module>
         <module>controller</module>
         <module>aspect</module>
+        <module>service</module>
     </modules>
 
     <dependencies>
-		<dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.62</version>
+        </dependency>
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
