--- a/parent/persistence/pom.xml
+++ b/parent/persistence/pom.xml
@@ -51,6 +51,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.48</version>
         </dependency>
+        <!-- newbase -->
+        <dependency>
+            <groupId>com.rnb.newbase</groupId>
+            <artifactId>toolkit</artifactId>
+            <version>0.0.3-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
