--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -31,6 +31,7 @@
         <module>core</module>
         <module>persistence</module>
         <module>toolkit</module>
+        <module>entity</module>
         <module>exception</module>
         <module>security</module>
         <module>web</module>
