--- a/parent/swagger/pom.xml
+++ b/parent/swagger/pom.xml
@@ -42,6 +42,11 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>com.github.caspar-chen</groupId>
+            <artifactId>swagger-ui-layer</artifactId>
+            <version>1.1.3</version>
+        </dependency>
     </dependencies>
 
 </project>
