修改redis模板序列化及反序列化问题

--- a/parent/redis/pom.xml
+++ b/parent/redis/pom.xml
@@ -16,7 +16,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>${spring.framework.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.5</version>
+        </dependency>
     </dependencies>
 
 </project>
