--- a/parent/core/pom.xml
+++ b/parent/core/pom.xml
@@ -5,24 +5,21 @@
     <parent>
         <groupId>com.rnb.newbase</groupId>
 		<artifactId>newbase-parent</artifactId>
-		<version>0.0.5-SNAPSHOT</version>
+		<version>0.1.0-SNAPSHOT</version>
     </parent>
-	<groupId>com.rnb.newbase</groupId>
+
     <artifactId>core</artifactId>
-    <version>0.0.5-SNAPSHOT</version>
-	<name>${project.artifactId}</name>
-    <description>Core for NewBase</description>
 
     <dependencies>
         <dependency>
             <groupId>com.rnb.newbase</groupId>
             <artifactId>exception</artifactId>
-            <version>0.0.5-SNAPSHOT</version>
+            <version>0.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-            <version>${spring.framework.version}</version>
+            <version>${spring.boot.version}</version>
         </dependency>
     </dependencies>
 </project>
