--- a/parent/rabbitmq/pom.xml
+++ b/parent/rabbitmq/pom.xml
@@ -6,15 +6,16 @@
     <parent>
         <groupId>com.rnb.newbase</groupId>
         <artifactId>newbase-parent</artifactId>
-        <version>0.0.5-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
+
     <artifactId>rabbitmq</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
-            <version>${spring.framework.version}</version>
+            <version>${spring.boot.version}</version>
         </dependency>
     </dependencies>
 
