--- a/parent/swagger/pom.xml
+++ b/parent/swagger/pom.xml
@@ -11,6 +11,12 @@
 
     <artifactId>swagger</artifactId>
     <dependencies>
+        <!-- spring boot swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
         <!-- newbase framework -->
         <dependency>
             <groupId>com.rnb.newbase</groupId>
@@ -22,26 +28,5 @@
             <artifactId>api</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
-        <!-- swagger ui -->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>3.0.0</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-beans</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-context</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-aop</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
     </dependencies>
-
 </project>
