--- a/parent/aspect/pom.xml
+++ b/parent/aspect/pom.xml
@@ -6,21 +6,23 @@
     <parent>
         <artifactId>newbase-parent</artifactId>
         <groupId>com.rnb.newbase</groupId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>aspect</artifactId>
 
     <dependencies>
+        <!-- spring -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>${spring.boot.version}</version>
         </dependency>
+        <!-- newbase framework -->
         <dependency>
-            <groupId>com.rnb.newbase</groupId>
+            <groupId>${parent.groupId}</groupId>
             <artifactId>controller</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
     </dependencies>
 
