--- a/parent/controller/pom.xml
+++ b/parent/controller/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>newbase-parent</artifactId>
         <groupId>com.rnb.newbase</groupId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>controller</artifactId>
@@ -20,19 +20,19 @@
         </dependency>
         <!-- newbase framework -->
         <dependency>
-            <groupId>com.rnb.newbase</groupId>
+            <groupId>${parent.groupId}</groupId>
             <artifactId>exception</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.rnb.newbase</groupId>
+            <groupId>${parent.groupId}</groupId>
             <artifactId>service</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.rnb.newbase</groupId>
+            <groupId>${parent.groupId}</groupId>
             <artifactId>toolkit</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
         <!-- tools -->
         <dependency>
