--- a/parent/entity/pom.xml
+++ b/parent/entity/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.rnb.newbase</groupId>
         <artifactId>newbase-parent</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>entity</artifactId>
@@ -14,9 +14,9 @@
     <dependencies>
         <!-- newbase -->
         <dependency>
-            <groupId>com.rnb.newbase</groupId>
+            <groupId>${parent.groupId}</groupId>
             <artifactId>toolkit</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
     </dependencies>
 	
