--- a/parent/persistence/pom.xml
+++ b/parent/persistence/pom.xml
@@ -5,17 +5,12 @@
     <parent>
         <groupId>com.rnb.newbase</groupId>
 		<artifactId>newbase-parent</artifactId>
-		<version>0.1.0-SNAPSHOT</version>
+		<version>0.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>persistence</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>com.rnb.newbase</groupId>
-            <artifactId>core</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
-        </dependency>
         <!-- spring framework -->
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
@@ -59,11 +54,16 @@
             <artifactId>mybatis-generator-maven-plugin</artifactId>
             <version>1.4.0</version>
         </dependency>
-        <!-- newbase -->
+        <!-- newbase framework -->
         <dependency>
-            <groupId>com.rnb.newbase</groupId>
+            <groupId>${parent.groupId}</groupId>
+            <artifactId>core</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${parent.groupId}</groupId>
             <artifactId>entity</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
     </dependencies>
 
