--- a/parent/swagger/pom.xml
+++ b/parent/swagger/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>newbase-parent</artifactId>
         <groupId>com.rnb.newbase</groupId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -19,14 +19,14 @@
         </dependency>
         <!-- newbase framework -->
         <dependency>
-            <groupId>com.rnb.newbase</groupId>
+            <groupId>${parent.groupId}</groupId>
             <artifactId>core</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.rnb.newbase</groupId>
+            <groupId>${parent.groupId}</groupId>
             <artifactId>api</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
     </dependencies>
 </project>
