--- a/parent/web/pom.xml
+++ b/parent/web/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.rnb.newbase</groupId>
         <artifactId>newbase-parent</artifactId>
-        <version>0.1.0-SNAPSHOT</version>
+        <version>0.1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>web</artifactId>
@@ -19,9 +19,9 @@
             <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.rnb.newbase</groupId>
+            <groupId>${parent.groupId}</groupId>
             <artifactId>controller</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>${parent.version}</version>
         </dependency>
     </dependencies>
 
