--- a/parent/cloud-client/pom.xml
+++ b/parent/cloud-client/pom.xml
@@ -21,7 +21,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-            <version>2.2.6.RELEASE</version>
+            <version>${spring.cloud.component.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>${spring.cloud.component.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
