更新引用版本号参数 增加gateway的分页头

--- a/parent/api/pom.xml
+++ b/parent/api/pom.xml
@@ -33,9 +33,9 @@
         </dependency>
         <!-- newbase framework -->
         <dependency>
-            <groupId>${parent.groupId}</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>toolkit</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
