--- a/parent/core/pom.xml
+++ b/parent/core/pom.xml
@@ -19,9 +19,9 @@
         </dependency>
         <!-- newbase framework -->
         <dependency>
-            <groupId>${parent.groupId}</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>exception</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 </project>
