--- a/parent/entity/pom.xml
+++ b/parent/entity/pom.xml
@@ -14,9 +14,9 @@
     <dependencies>
         <!-- newbase -->
         <dependency>
-            <groupId>${parent.groupId}</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>toolkit</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 	
