--- a/parent/web/pom.xml
+++ b/parent/web/pom.xml
@@ -19,9 +19,9 @@
             <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
-            <groupId>${parent.groupId}</groupId>
+            <groupId>${project.parent.groupId}</groupId>
             <artifactId>controller</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
